# trab-fcg

./: .gitignore  CMakeLists.txt  README.md
assets/: CMakeLists.txt
assets/3d0113f9558947579a5d7926f087cc6a_obj/: model.mtl
assets/L553JN21ZU93ULU6J4LNBJYP5_obj/: L553JN21ZU93ULU6J4LNBJYP5.mtl
assets/N6TIYZO5D41STEOW4SQBKWRRG_obj/: N6TIYZO5D41STEOW4SQBKWRRG.mtl
assets/shaders/: shader_fragment-tarefa2.glsl  shader_fragment.glsl  shader_vertex.glsl
include/: ambient.hpp  collisions.hpp  hello-world.hpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/src/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
lib/stb_image/src/: CMakeLists.txt
lib/tiny_obj_loader/: CMakeLists.txt
lib/tiny_obj_loader/src/: CMakeLists.txt
src/: CMakeLists.txt  ambient.cpp  collisions.cpp  main.cpp
